tests/agl/rejections/type/partial_special_ask_request.agl
let request = ask-request(?)
request
